Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59522

Failures to get dcp-vbtakeover stats from memcached are indistinguishable from one another

    XMLWordPrintable

Details

    • Triaged
    • 0
    • No
    • KV 2023-4

    Description

      ns_server will see many different issues manifest as a "{error, no_stats_for_this_vbucket}" when it comes to gathering dcp-vbtakeover stats for some vBucket/stream. The following issues manifest in this way:

      1) The vBucket does not exist in memcached
      2) The connection with the given name does not exist in memcached
      3) The connection exists but the stream does not
      4) The connection exists, an ActiveStream exists, but the stream has state dead
      5) Memcached returns some header with 0 length key
      6) Memcached does not return any stat for the "status" key

      Whilst logs give us some clue of which errors we can expect to have not hit, having the information at the point of error is always much clearer.

      Attachments

        For Gerrit Dashboard: MB-59522
        # Subject Branch Project Status CR V

        Activity

          People

            ben.huddleston Ben Huddleston
            ben.huddleston Ben Huddleston
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty