MB-59522: Return better statuses for failure to get takeover stats

So that we can determine what the issue is when it happens, rather
than guess based on log messages.

Change-Id: Ida3e56d527883450219743df9ba5836f2d14f136
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/200938
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>